# clean-todo-app

./: .gitignore  README.md  main.py  pyproject.toml
app/: manager.py  models.py
app/frontend/: README.md  next.config.mjs  package-lock.json  package.json
app/frontend/app/: page.tsx
app/frontend/components/: Login.tsx  TodoItem.tsx
app/storages/: __init__.py  base.py  file_storage.py  in_memory.py  sqlite_storage.py
app/ui/: __init__.py  base.py  cli_ui.py  web_ui.py
app/ui/templates/: index.html
tests/: test_task_manager.py
tests/strage/: test_file_storage.py  test_in_memory_storage.py  test_sqlite_storage.py
tests/ui/: test_cli_ui.py  test_web_ui.py
